test/org/midica/testfiles/failing/compact-invalid-option.midica
INCLUDE inc/instruments.midica

0: c c (v=127,l=text,d=50%) c (s=1) c
